--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
+    "express-query-boolean": "^2.0.0",
+    "joi": "^17.9.2",
     "nodemon": "^3.0.1",
     "upper-case": "^2.0.2",
     "uuid": "^9.0.0",
