--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-query-boolean": "^2.0.0",
     "joi": "^17.9.2",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.2",
     "nodemon": "^3.0.1",
     "upper-case": "^2.0.2",
     "uuid": "^9.0.0",
