--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "nodemon": "^3.0.1",
+    "redis": "^4.6.7",
     "upper-case": "^2.0.2",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
