--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "express": "^4.18.2",
     "express-query-boolean": "^2.0.0",
     "googleapis": "^125.0.0",
+    "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "nodemailer": "^6.9.4",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1",
     "redis": "^4.6.7",
     "upper-case": "^2.0.2",
