set oAuth for the employee registration

--- a/.env
+++ b/.env
@@ -9,3 +9,10 @@ CLIENT_ID = 564001734472-cq349sjes9qaue32m0o5c05bgj88fk4g.apps.googleusercontent
 CLIENT_SECRET = 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
 REDIRECT_URI = https://developers.google.com/oauthplayground
 REFRESH_TOKEN = 1//04CJyEPs4M_7OCgYIARAAGAQSNwF-L9Ir4XdreQcBKRyHB5TytR5vW4kkX2mIoykSXVpTE_qnSiFQrTDkmL7yEP62sFPRMOvwb6g
+
+
+#Employee 
+
+EMP_CLIENT_SECRET = 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
+EMP_CLIENT_ID = 600820985041-c1r6ugnss92tpq4hqjeo7glhl8gn7nr6.apps.googleusercontent.com
+EMP_REFRESH_TOKEN = 1//04Cb87lKdqSgkCgYIARAAGAQSNwF-L9IrjOj1pCeKDUOM7piOHgvkVUOD1dv4gCcFKqiia-2dg0XD4LQ5sb_hhEyoCoOWCFahcXw
